--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -929,7 +929,7 @@
 								<!-- 大小網展開收合功能觸發點[data-filter-collapse] -->
 								<a href="#" class="o-btn o-btn--primary o-btn--flat o-btn--auto" data-filter-collapse>
 									展開進階篩選
-									<img src="../themes/images/icons/white/corner-down-sm.svg" class="o-btn__icon o-btn__icon--xs" alt="">
+									<img src=".~/themes/images/icons/white/corner-down-sm.svg" class="o-btn__icon o-btn__icon--xs" alt="">
 								</a>
 							</div>
 						</div>
@@ -938,7 +938,7 @@
 								<!-- 大小網展開收合功能觸發點[data-filter-collapse] -->
 								<a href="#" class="o-btn o-btn--primary o-btn--flat o-btn--auto" data-filter-collapse>
 									收合進階篩選
-									<img src="../themes/images/icons/white/corner-up-sm.svg" class="o-btn__icon o-btn__icon--xs" alt="">
+									<img src=".~/themes/images/icons/white/corner-up-sm.svg" class="o-btn__icon o-btn__icon--xs" alt="">
 								</a>
 							</div>
 						</div>
@@ -1102,7 +1102,7 @@
 				<div class="c-section__content">
 					<div class="c-empty">
 						<div class="c-empty__img">
-							<img src="./../themes/images/lions/lion-compare.svg" alt="">
+							<img src="~/themes/images/lions/lion-compare.svg" alt="">
 						</div>
 						<div class="c-empty__desc">查無商品，請嘗試調整篩選條件</div>
 					</div>
@@ -1870,7 +1870,7 @@
 <template id="tmplKeywordNotFound">
 	<div class="c-empty">
 		<div class="c-empty__img">
-			<img src="./../themes/images/lions/lion-keyword.svg" alt="">
+			<img src="~/themes/images/lions/lion-keyword.svg" alt="">
 		</div>
 		<div class="c-empty__desc">哎呀！沒找到耶...<br>試試看其他關鍵字吧</div>
 	</div>
