--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
@@ -25,7 +25,7 @@
                                         <div class="c-itemNotify__link">
                                             <a href="#" class="o-itemLink">
                                                 <span class="o-itemLink__title">提醒您，您預約2023/12/14 下午14:00的理財諮詢即將到來！</span>
-                                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -39,7 +39,7 @@
                                         <div class="c-itemNotify__link">
                                             <a href="#" class="o-itemLink">
                                                 <span class="o-itemLink__title">您已成功預約2023/09/28 下午13:00的理專諮詢，請查看會議連結</span>
-                                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -53,7 +53,7 @@
                                         <div class="c-itemNotify__link">
                                             <a href="#" class="o-itemLink">
                                                 <span class="o-itemLink__title">薪轉戶獨享基金申購免手續費優惠</span>
-                                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -67,7 +67,7 @@
                                         <div class="c-itemNotify__link">
                                             <a href="#" class="o-itemLink">
                                                 <span class="o-itemLink__title">10月投資月報來囉！</span>
-                                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -81,7 +81,7 @@
                                         <div class="c-itemNotify__link">
                                             <a href="#" class="o-itemLink">
                                                 <span class="o-itemLink__title">日盛新台商基金已達到您設定的最低價囉！</span>
-                                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                             </a>
                                         </div>
                                     </div>
@@ -111,31 +111,31 @@
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">關注清單</span>
-                                    <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#a" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">專屬推薦</span>
-                                    <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">理財試算</span>
-                                    <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">收藏新聞</span>
-                                    <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                             <li class="c-listGroup__item">
                                 <a href="#" class="o-itemLink">
                                     <span class="o-itemLink__title t-bold">遠距理財諮詢</span>
-                                    <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
                         </ul>
