--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -25,43 +25,43 @@
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">基金搜尋</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">熱銷基金</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">績效排行</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">投資週/月報</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">國外股票搜尋</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">ETF搜尋</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                         <li class="c-listGroup__item">
                             <a href="#" class="o-itemLink o-itemLink--sm">
                                 <span class="o-itemLink__title t-bold">優惠活動</span>
-                                <img src="./themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                             </a>
                         </li>
                     </ul>
@@ -77,7 +77,7 @@
                         <span class="t-bold">7/7</span>
                         <span class="t-tip">常用功能到上限嚕！</span>
                     </div>
-                    <img src="./themes/images/lions/lion01.svg" class="c-sideDialog__img" alt="">
+                    <img src="~/themes/images/lions/lion01.svg" class="c-sideDialog__img" alt="">
                 </div>
             </footer>
         </div>
@@ -142,7 +142,7 @@
                         <span class="t-bold">7/7</span>
                         <span class="t-tip">標的到上限嚕！</span>
                     </div>
-                    <img src="./themes/images/lions/lion01.svg" class="c-sideDialog__img" alt="">
+                    <img src="~/themes/images/lions/lion01.svg" class="c-sideDialog__img" alt="">
                 </div>
             </footer>
         </div>
