--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -124,7 +124,7 @@
         <div class="c-modal__content">
             <div class="c-modalResult">
                 <div class="c-modalResult__icon">
-                    <img src="./themes/images/icons/orange/x-solid.svg" class="c-modalResult__img" alt="">
+                    <img src="~/themes/images/icons/orange/x-solid.svg" class="c-modalResult__img" alt="">
                 </div>
                 <div class="c-modalResult__title">基金商品比較已達上限</div>
                 <p class="c-modalResult__msg">您一次最多可比較7個基金</p>
