--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
@@ -17,7 +17,7 @@
 						<div class="l-target__name">
 							@if (item.ProductCode != null)
 							{
-								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2">@item.ProductCode @item.ProductName</a>
+								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
 							}
 							else
 							{
