fix: 基金詳細頁bugfix 20240419

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundCloseFiveYears.cshtml
@@ -347,7 +347,7 @@
         $.each(data, function(index, value) {
             midHtml += ` <tr>
                                                 <td class="u-left">
-                                                    <a href="${detailsUrl}?id=${data[index].id}" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
+                                                    <a href="${detailsUrl}?id=${data[index].id}" target="_blank" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
                                                         <span class="c-legend__name">${data[index].id + " " +data[index].name}</span>
                                                     </a>
                                                 </td>
@@ -401,7 +401,7 @@
             $.each(data, function (index, value) {
                 midHtml += ` <tr>
                                                 <td class="u-left">
-                                                    <a href="${detailsUrl}?id=${data[index].id}" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
+                                                    <a href="${detailsUrl}?id=${data[index].id}" target="_blank" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
                                                         <span class="c-legend__name">${data[index].id + " " + data[index].name}</span>
                                                     </a>
                                                 </td>
@@ -479,7 +479,7 @@
               $.each(data, function (index, value) {
                 html += ` <tr>
                                                 <td class="u-left">
-                                                    <a href="${detailsUrl}?id=${data[index].id}" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
+                                                    <a href="${detailsUrl}?id=${data[index].id}" target="_blank" class="c-legend c-legend--link" style="--legend-color:${data[index].color}">
                                                         <span class="c-legend__name">${data[index].id + " " + data[index].name}</span>
                                                     </a>
                                                 </td>
