--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -39,69 +39,18 @@
                                 <div class="c-filterForm__value">
                                     <div class="l-pickGroup">
 
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="智能AI"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="通貨膨脹"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="ESG"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="美國"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="第一金投信"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="全球新興市場"></div>
-                                            </label>
-                                        </div>
-
-                                        <div class="l-pickGroup__item">
-                                            <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                            <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                            <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="">
-                                                <input class="o-btnCheckBox__input" type="checkbox">
-                                                <div class="o-btnCheckBox__text" data-filter-value="生化"></div>
-                                            </label>
-                                        </div>
+                                        @if (Model.HotKeywordTags != null)
+                                        {
+                                            foreach (var tag in Model.HotKeywordTags)
+                                            {
+                                                <div class="l-pickGroup__item">
+                                                    <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox="" value="@tag">
+                                                        <input class="o-btnCheckBox__input" type="checkbox">
+                                                        <div class="o-btnCheckBox__text" data-filter-value="@tag"></div>
+                                                    </label>
+                                                </div>
+                                            }
+                                        }
 
                                     </div>
                                 </div>
@@ -135,50 +84,20 @@
                                                     </label>
                                                 </div>
 
-                                                <div class="l-pickGroup__item">
-                                                    <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                                    <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                                    <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox">
-                                                        <div class="o-btnCheckBox__text" data-filter-value="醫股潮流"></div>
-                                                    </label>
-                                                </div>
+                                                @if (Model.HotProductTags != null)
+                                                {
+                                                    foreach (var tag in Model.HotProductTags)
+                                                    {
+                                                        <div class="l-pickGroup__item">
+                                                            <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox="" value="@tag">
+                                                                <input class="o-btnCheckBox__input" type="checkbox">
+                                                                <div class="o-btnCheckBox__text" data-filter-value="@tag"></div>
+                                                            </label>
+                                                        </div>
+                                                    }
+                                                }
 
-                                                <div class="l-pickGroup__item">
-                                                    <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                                    <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                                    <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox">
-                                                        <div class="o-btnCheckBox__text" data-filter-value="源源不絕"></div>
-                                                    </label>
-                                                </div>
-
-                                                <div class="l-pickGroup__item">
-                                                    <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                                    <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                                    <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox">
-                                                        <div class="o-btnCheckBox__text" data-filter-value="新興崛起"></div>
-                                                    </label>
-                                                </div>
-
-                                                <div class="l-pickGroup__item">
-                                                    <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                                    <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                                    <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox">
-                                                        <div class="o-btnCheckBox__text" data-filter-value="優質守選"></div>
-                                                    </label>
-                                                </div>
-
-                                                <div class="l-pickGroup__item">
-                                                    <!-- 篩選checkbox外層[data-filter-checkbox] -->
-                                                    <!-- 若checkbox搭配篩選功能，請將選項文字寫在[data-filter-value]上 -->
-                                                    <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox">
-                                                        <div class="o-btnCheckBox__text" data-filter-value="愛地球"></div>
-                                                    </label>
-                                                </div>
+                                               
 
                                             </div>
                                         </div>
@@ -1875,6 +1794,16 @@
         <div class="c-empty__desc">哎呀！沒找到耶...<br>試試看其他關鍵字吧</div>
     </div>
 </template>
+<div id="popupFundRating" class="c-modal c-modal--xs mfp-hide">
+        <div class="c-modal__wrap">
+            <header class="c-modal__header">
+                <h2 class="c-modal__title">基金評等</h2>
+            </header>
+            <div class="c-modal__content">
+                <p>@Model.Content</p>
+            </div>
+        </div>
+    </div>
 
 <script>
     (function ($, window, document, undefined) {
